添加构建和部署脚本，支持在树莓派上构建和推送Docker镜像。新增本地构建脚本以便于开发，更新docker-compose.yml以配置服务，创建Dockerfile以定义镜像构建过程，新增部署指南文档，确保项目在树莓派环境下的顺利运行。更新.gitignore和README.md以反映新文件和功能，确保项目结构清晰且易于使用。

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # ROS2 Car Fun - Git Ignore File
 # 忽略不需要版本控制的文件和目录
 
-# 文档资料目录 (用户要求)
-.docs/
+# 注意：.docs/ 目录包含重要的技术资料，不要忽略
+# docs/ 目录如果是自动生成的文档可以忽略
 docs/
 
 # Python 编译文件
@@ -145,3 +145,5 @@ cython_debug/
 # 配置文件中的敏感信息 (如果有)
 # config/secrets.yaml
 # config/private.yaml
+
+.docs/
